tdf#116874: Don't sign with watermark if the checkbox is disabled

Change-Id: I354b0c3f0d6d29d91c1d7fa9678c4ce0bd7c8c1a