filter/source/pdf/impdialog.cxx
@@ -725,7 +725,8 @@ void ImpPDFTabGeneralPage::GetFilterConfigItem( ImpPDFTabDialog* paParent )
         paParent->mbExportFormFields = mpCbExportFormFields->IsChecked();
     }
 
-    paParent->maWatermarkText = mpEdWatermark->GetText();
+    if( mpFtWatermark->IsEnabled() )
+        paParent->maWatermarkText = mpEdWatermark->GetText();
 
     /*
     * FIXME: the entries are only implicitly defined by the resource file. Should there
